Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-1513

QMF Broker can get stuck with partial schema information from an agent

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • M4
    • M4
    • QMF
    • None

    Description

      When an agent connects to the broker, it exchanges management schema information. If the agent crashes or otherwise shuts down in the middle of the message exchange, the broker can be left with partial schema information. The information is not completed when the agent (or another agent with the same schema) reconnects.

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: