QPID-1513 - Fix corner case where incompleted schema records are             not completed if the agent disconnects mid-startup.

git-svn-id: https://svn.apache.org/repos/asf/incubator/qpid/trunk@722953 13f79535-47bb-0310-9956-ffa450edef68